--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My App</string>
+    <string name="happy_birthday_text">Happy Birthday</string>
+    <string name="birthday_name">Macy</string>
 </resources>
